// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/badge/demo/basic.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="0"
    >
      0
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-scroll-number-custom-component"
      style="color:#f5222d"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#clock-circle"
        />
      </svg>
    </i>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/change.md correctly 1`] = `
<div>
  <div>
    <span
      class="ant-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="ant-scroll-number ant-badge-count"
        data-show="true"
        title="5"
      >
        <span
          class="ant-scroll-number-only"
          style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
        >
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class="current"
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
        </span>
      </sup>
    </span>
    <div
      class="ant-btn-group"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <i
          aria-label="icon: minus"
          class="anticon anticon-minus"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#minus"
            />
          </svg>
        </i>
      </button>
      <button
        class="ant-btn"
        type="button"
      >
        <i
          aria-label="icon: plus"
          class="anticon anticon-plus"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#plus"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>
  <div
    style="margin-top:10px"
  >
    <span
      class="ant-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="ant-scroll-number ant-badge-dot"
        data-show="true"
      />
    </span>
    <button
      aria-checked="true"
      checked=""
      class="ant-switch ant-switch-checked"
      role="switch"
      type="button"
    >
      <span
        class="ant-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/badge/demo/dot.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <i
      aria-label="icon: notification"
      class="anticon anticon-notification"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#notification"
        />
      </svg>
    </i>
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
    />
  </span>
  <span
    class="ant-badge"
  >
    <i
      aria-label="icon: notification"
      class="anticon anticon-notification"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#notification"
        />
      </svg>
    </i>
  </span>
  <span
    class="ant-badge"
  >
    <a
      href="#"
    >
      Link something
    </a>
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
    />
  </span>
</div>
`;

exports[`renders ./components/badge/demo/link.md correctly 1`] = `
<a
  href="#"
>
  <span
    class="ant-badge"
  >
    <span
      class="head-example"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
</a>
`;

exports[`renders ./components/badge/demo/no-wrapper.md correctly 1`] = `
<div>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="25"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1200%);-webkit-transform:translateY(-1200%);transform:translateY(-1200%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class="current"
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      style="background-color:#fff;color:#999;box-shadow:0 0 0 1px #d9d9d9 inset"
      title="4"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1400%);-webkit-transform:translateY(-1400%);transform:translateY(-1400%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class="current"
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      style="background-color:#52c41a"
      title="109"
    >
      99+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/overflow.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="99"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="100"
    >
      99+
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="99"
    >
      10+
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="1000"
    >
      999+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/status.md correctly 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    >
      Success
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    >
      Error
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    >
      Default
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    >
      Processing
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    >
      Warning
    </span>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/title.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="Custom hover text"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
</div>
`;
